--- a/Content/Resources/Stylesheets/Styles.css
+++ b/Content/Resources/Stylesheets/Styles.css
@@ -559,6 +559,18 @@ p.footer-sub
 	margin-top: 14px;
 }
 
+ol li:nth-child(1)
+{
+	list-style-type: none;
+	mc-auto-number-format: '{n=1}. ';
+}
+
+ol li
+{
+	list-style-type: none;
+	mc-auto-number-format: '{n+}. ';
+}
+
 @media tablet
 {
 	/* Home page topic */
@@ -740,6 +752,11 @@ p.footer-sub
 	{
 		mc-format: '{paranumonly} {pageref}';
 	}
+
+	ol li
+	{
+		
+	}
 }
 
 MadCap|xref.FigureNumber
@@ -750,5 +767,10 @@ MadCap|xref.FigureNumber
 p.FigureCaption
 {
 	mc-auto-number-format: 'F:Figure {n+}: ';
+}
+
+MadCap|xref.StepNumber
+{
+	mc-format: '{paranumonly}';
 }
 
